layout bugfix

--- a/config_builder/resources/styles.css
+++ b/config_builder/resources/styles.css
@@ -14,7 +14,7 @@ b i {
 }
 
 .heading {
-  display: flex;
+  display: flex !important;
   align-items: center;
 }
 
